less/_toolbars.less
/***********************/
/* Tabbed Panes
/***********************/
.tabbed-pane:not(.help-window-main) {

	.tabbed-pane-header {
		background: -webkit-linear-gradient(@gradient-top, @gradient-bottom) !important;
		box-shadow: inset 0 1px 0 lighten(@gradient-top,7%) !important;
		border-bottom: 1px solid darken(@gradient-bottom,10%) !important;

		.tabbed-pane-header-tab {
			border-top: 2px solid rgba(0,0,0,0) !important;
			border-left: none !important;
			border-right: none !important;
			padding: 2px 7px !important;
			margin: 0 !important;
			margin-top: 0 !important;
			margin-bottom: 1px !important;
			border-color: transparent !important;

			&:hover {
				color: @tab-label-selected !important;
			}

			&.selected {
				background: none !important;
				border-top: 2px solid @tab-highlighted !important;
				color: @tab-label-selected !important;
				font-size: 1em;
			}
		}

		.editor-container-unsaved-committed-changes-icon + .tabbed-pane-header-tab-title {
			color: @tab-label-unsaved;
		}

		.tabbed-pane-header-contents {
			color: @tab-label !important;
		}

		.tabbed-pane-header-tab-title {
			line-height: 16px !important;
		}
	}
}

.tabbed-pane:not(.help-window-main) .overrides-view .tabbed-pane-header-tab {
	border-top: none !important;
	margin-left: 6px !important;

	&.selected {
		border-top: none !important;
		border-left: 6px solid @global-accent !important;
		margin-left: 0 !important;
	}
}

// Subtoolbars
.tabbed-pane-content {

	.resizer-widget {
	// button.status-bar-item.left-sidebar-show-hide-button,
	// button.status-bar-item.right-sidebar-show-hide-button {
		top: @tab-sub-icons-padding !important;
	}

	not(.overrides-view) .tabbed-pane-header {
		flex: 0 0 @tab-sub-toolbar-height !important;


		.tabbed-pane-header-tab {
			height: @tab-sub-toolbar-height !important;
			line-height: (.75*@tab-sub-toolbar-height) !important;
			cursor: pointer !important;
		}
	}
}

// Drawer Toolbar
#drawer-contents .tabbed-pane-header,
&.inactive #drawer-contents .tabbed-pane-header {
	border-top: none !important;
	border-bottom: #222 !important;
}

// Override MAC Toolbar Background
body .toolbar-background,
body.undocked.platform-mac-mountain-lion.inactive .toolbar-background,
body.undocked.platform-mac-mountain-lion .toolbar-background,
body.platform-mac-mountain-lion.inactive .toolbar-background,
body.platform-mac-mountain-lion .toolbar-background,
body.undocked.platform-mac.inactive .toolbar-background,
body.undocked.platform-mac .toolbar-background,
body.inactive .toolbar-background,
body:not(.undocked) .toolbar-background {
	background-image: -webkit-linear-gradient(@gradient-top, @gradient-bottom) !important;
	border-bottom: none !important;
}

select.tabbed-pane-header-tabs-drop-down-select{
	background-color: @global-background !important;
	color: @global-text !important;
}

// Main Toolbar
.toolbar {
	background: -webkit-linear-gradient(@gradient-top, @gradient-bottom) !important;
	border-bottom: none !important;
	flex: 0 0 @tab-main-toolbar-height !important;
	padding: 0 !important;

	.tabbed-pane-header {

		.tabbed-pane-header-tab {
			height: @tab-main-toolbar-height !important;
			line-height: (.75*@tab-main-toolbar-height) !important;
			padding: 2px 4px !important;
			cursor: pointer !important;
			border-image: none !important;
		}

		.tabbed-pane-header-tabs-drop-down {
			line-height: (0.9*@tab-main-toolbar-height);
		}

	}

	.toolbar-controls-left,
	.toolbar-controls-right {
		padding-top: @tab-main-icons-padding !important;
		border-bottom: 1px solid darken(@gradient-bottom,10%) !important;
		box-shadow: inset 0 1px 0 lighten(@gradient-top,7%) !important;
	}
}

//Network Tabs
#network-views .network-item-view .tabbed-pane-header {
	padding-top: 0 !important;

		.tabbed-pane-header-tab {
			height: 31px !important;
		}

		.tabbed-pane-header-tab-title {
			line-height: 21px !important;
		}
}

// small resource rows
#network-views.small .network-item-view .tabbed-pane-header .tabbed-pane-header-tab-title {
	line-height: 12px !important;
}

// Dropdown UI
.tabbed-pane-header-tabs-drop-down {
	color: #999 !important;
}

// Sidebar Borders
.split-view.hbox {

	> .split-view-sidebar.split-view-contents-second:not(.maximized) {
		border-left: 2px solid @global-divider !important;
	}

	> .split-view-sidebar.split-view-contents-first:not(.maximized) {
		border-right: 2px solid @global-divider !important;
	}
}

// Prevent widths of tabs from truncating label text */
.tabbed-pane-header-tab {
	width: auto !important;
}

//FILTERS
.filter-bitset-filter {

	li,
	li.selected,
	li:hover,
	li:active {
		text-shadow: 0 0 0 rgba(0,0,0,0) !important;
		color: @global-text !important;
	}

	li:hover {
		background: @filter-hover !important;
	}

	li.selected {
		color: @filter-selected-text !important;
		background: @filter-selected !important;


		//custom colors
		&.error {
			background: @filter-error !important;
		}

		&.warning{
			background: @filter-warning !important;
		}

		&.info{
			background: @filter-info !important;
		}

		&.log{
			background: @filter-log !important;
		}

		&.debug{
			background: @filter-debug !important;
		}
	}
}

.network-filters-header,
.console-filters-header,
.timeline-filters-header {
	background: @filter-background;
}

/*separator between all | rest of options*/
.filter-bitset-filter-divider {
	background-color: lighten(@global-background, 10%);
}

// error/warning counts on toolbar
#error-warning-count {
	color: @global-text !important;
}

